--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,15 +2,19 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {% block stylesheets %}
+            <link rel="stylesheet" href="/styles/style.css">
         {% endblock %}
 
+		<script src="https://code.jquery.com/jquery-3.6.4.min.js" -->
+			  <!-- integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" -->
+			  <!-- crossorigin="anonymous"></script> 
         {% block javascripts %}
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% block body %}<button>импортировать пользователей</button>{% endblock %}
     </body>
 </html>
